syntax = "proto3";

package service;

import "google/protobuf/empty.proto";
import "google/api/annotations.proto";
import "github.com/lyft/protoc-gen-validate/validate/validate.proto";
import "protoc-gen-swagger/options/annotations.proto";
import "github.com/infobloxopen/atlas-app-toolkit/query/collection_operators.proto";

option go_package = "github.com/Infoblox-CTO/atlas.feature.flag/pkg/pb;pb";

message VersionResponse {
  string version = 1;
}

message FeatureFlag {
  string feature_name = 1;
  string value = 2;
  string origin = 3;
}

message ListFeatureFlagRequest {
  infoblox.api.Filtering filter = 1;
  infoblox.api.Sorting order_by = 2;
  infoblox.api.FieldSelection fields = 3;
  infoblox.api.Pagination paging = 4;
  map<string,string> labels = 5;
}

message ListFeatureFlagResponse {
  repeated FeatureFlag results = 1;
  infoblox.api.PageInfo page = 2;
}

message ReadFeatureFlagRequest {
  string feature_name = 1;
  infoblox.api.FieldSelection fields = 2;
}

message ReadFeatureFlagResponse {
  FeatureFlag result = 1;
}

service AtlasFeatureFlag {
  rpc GetVersion (google.protobuf.Empty) returns (VersionResponse) {
    option (google.api.http) = {
      get: "/version"
    };
  }

  rpc List (ListFeatureFlagRequest) returns (ListFeatureFlagResponse) {
    option (google.api.http) = {
      get: "/feature"
    };
  }

  rpc Read (ReadFeatureFlagRequest) returns (ReadFeatureFlagResponse) {
    option (google.api.http) = {
      get: "/feature/{feature_name}"
    };
  }
}
